manifests/deploy-healthcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-health
  template:
    metadata:
      labels:
        app: nginx-health
    spec:
      containers:
      - name: nginx
        image: wanlingj/cse644-custom-nginx:v1
        ports:
        - containerPort: 80
        # 注入ConfigMap环境变量
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        # 就绪探针readiness：判断服务是否可以接收流量
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
