manifests/nginx-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
  namespace: default
  labels:
    app: nginx-exporter
spec:
  selector:
    app: nginx-exporter   # 直接写label，不要嵌套 matchLabels
  ports:
  - name: metrics
    port: 9113
    targetPort: 9113
