manifests/nginx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-metrics-svc
  namespace: default
spec:
  selector:
    app: nginx-web
  ports:
    - name: metrics
      port: 9113
      targetPort: 9113
