manifests/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-web
  ports:
  - port: 80
    targetPort: 80
