manifests/svc-nginx-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-svc
spec:
  selector:
    app: nginx-web
  ports:
  - name: http
    port: 80
    targetPort: 80
  # 新增指标端口
  - name: metrics
    port: 9113
    targetPort: 9113
